--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -16,101 +16,132 @@
                             <li class="list-group-item day">上映日 : <span></span></li>
                         </ul>
                         <div class="form-group">
-                            <label class="" for="doorTime">開場時刻</label>
-                            <div class="form-inline">
-                                <%- include('../../common/part/_timeSelector', {
-                                    hourName: 'doorTimeHour',
-                                    minuteName: 'doorTimeMinutes'
-                                }) %>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="doorTime">開場時刻</label>
+                                <div class="col-md-8 form-inline">
+                                    <%- include('../../common/part/_timeSelector', {
+                                            hourName: 'doorTimeHour',
+                                            minuteName: 'doorTimeMinutes'
+                                        }) %>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="" for="startTime">開始時刻</label>
-                            <div class="form-inline">
-                                <%- include('../../common/part/_timeSelector', {
-                                    hourName: 'startTimeHour',
-                                    minuteName: 'startTimeMinutes'
-                                }) %>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="startTime">開始時刻</label>
+                                <div class="col-md-8 form-inline">
+                                    <%- include('../../common/part/_timeSelector', {
+                                            hourName: 'startTimeHour',
+                                            minuteName: 'startTimeMinutes'
+                                        }) %>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="" for="endTime">終了時刻</label>
-                            <div class="form-inline">
-                                <%- include('../../common/part/_timeSelector', {
-                                    hourName: 'endTimeHour',
-                                    minuteName: 'endTimeMinutes'
-                                }) %>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="endTime">終了時刻</label>
+                                <div class="col-md-8 form-inline">
+                                    <%- include('../../common/part/_timeSelector', {
+                                            hourName: 'endTimeHour',
+                                            minuteName: 'endTimeMinutes'
+                                        }) %>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="" for="screen">スクリーン</label>
-                            <div class="">
-                                <select class="form-control" name="screen"></select>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="screen">スクリーン</label>
+                                <div class="col-md-8 ">
+                                    <select class="form-control" name="screen"></select>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="" for="ticketTypeGroup">券種グループ</label>
-                            <div class="">
-                                <select class="form-control" name="ticketTypeGroup">
-                                    <option value="">選択してください</option>
-                                    <% for (ticketType of ticketGroups) { %>
-                                    <option value="<%= ticketType.id %>">
-                                        <%= ticketType.name.ja %>
-                                    </option>
-                                    <% } %>
-                                </select>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="ticketTypeGroup">券種グループ</label>
+                                <div class="col-md-8 ">
+                                    <select class="form-control" name="ticketTypeGroup">
+                                        <option value="">選択してください</option>
+                                        <% for (ticketType of ticketGroups) { %>
+                                        <option value="<%= ticketType.id %>">
+                                            <%= ticketType.name.ja %>
+                                        </option>
+                                        <% } %>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="" for="saleStartDate">販売開始日</label>
-                            <div class="form-inline">
-                                <input class="form-control datepicker" name="saleStartDate" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
-                                日
-                                <%- include('../../common/part/_timeSelector', {
-                                    hourName: 'saleStartDateHour',
-                                    minuteName: 'saleStartDateMinutes'
-                                }) %>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="saleStartDate">販売開始日</label>
+                                <div class="col-md-8 form-inline">
+                                    <input class="form-control datepicker" name="saleStartDate" placeholder="YYYY/MM/DD"
+                                        maxlength=10>
+                                    日
+                                    <%- include('../../common/part/_timeSelector', {
+                                        hourName: 'saleStartDateHour',
+                                        minuteName: 'saleStartDateMinutes'
+                                    }) %>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="" for="onlineDisplayStartDate">オンライン表示開始日</label>
-                            <div class="form-inline">
-                                <input class="form-control datepicker" name="onlineDisplayStartDate"
-                                    placeholder="YYYY/MM/DD" maxlength=10>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="onlineDisplayStartDate">オンライン表示開始日</label>
+                                <div class="col-md-8 form-inline">
+                                    <input class="form-control datepicker" name="onlineDisplayStartDate"
+                                        placeholder="YYYY/MM/DD" maxlength=10>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="" for="maxSeatNumber">上限枚数</label>
-                            <div class="form-inline">
-                                <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                    for="maxSeatNumber">上限枚数</label>
+                                <div class="col-md-8">
+                                    <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="name" class="">
-                            </label>
-                            <div class="form-check">
-                                <label class="form-check-label" for="mvtkExcludeFlg">
-                                    <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1"
-                                        id="mvtkExcludeFlg">
-                                    ムビチケ対象外
-                                    <span class="form-check-sign">
-                                        <span class="check"></span>
-                                    </span>
+                            <div class="row">
+                                <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                                 </label>
+                                <div class="col-md-8 form-check">
+                                    <label class="form-check-label" for="mvtkExcludeFlg">
+                                        <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1"
+                                            id="mvtkExcludeFlg">
+                                        ムビチケ対象外
+                                        <span class="form-check-sign">
+                                            <span class="check"></span>
+                                        </span>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="form-check">
-                                <input disabled class="form-check-input" type="checkbox"
-                                    name="reservedSeatsAvailableDisabled" value="1" id="reservedSeatsAvailableDisabled">
-                                <input type="hidden" value="1" name="reservedSeatsAvailable">
-                                <label class="form-check-label" for="reservedSeatsAvailable">
-                                    座席指定あり
-                                    <span class="form-check-sign">
-                                        <span class="check"></span>
-                                    </span>
+                            <div class="row">
+                                <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                                 </label>
+                                <div class="col-md-8 form-check">
+                                    <input disabled class="form-check-input" type="checkbox"
+                                        name="reservedSeatsAvailableDisabled" value="1"
+                                        id="reservedSeatsAvailableDisabled">
+                                    <input type="hidden" value="1" name="reservedSeatsAvailable">
+                                    <label class="form-check-label" for="reservedSeatsAvailable">
+                                        座席指定あり
+                                        <span class="form-check-sign">
+                                            <span class="check"></span>
+                                        </span>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </form>
