--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -12,6 +12,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <!-- <link href="/css/bootstrap.css" rel="stylesheet"> -->
     <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
 
     <link href="/css/style.css" rel="stylesheet">
 
@@ -34,13 +36,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- moment.js. -->
+    <script src="/js/moment.min.js" type="text/javascript"></script>
+    <script src="/js/moment-timezone-with-data.min.js" type="text/javascript"></script>
+
     <!-- datepicker本体 -->
     <script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
     <!-- datepicker日本語対応用ファイル -->
     <script src="/js/locales/bootstrap-datepicker.ja.js" type="text/javascript"></script>
-    <!-- moment.js. -->
-    <script src="/js/moment.min.js" type="text/javascript"></script>
-    <script src="/js/moment-timezone-with-data.min.js" type="text/javascript"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.21/moment-timezone.js" type="text/javascript"></script> -->
     <script src="/js/master/common.js"></script>
@@ -55,6 +62,7 @@
 
     <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
     <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-selectpicker.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/js/bootstrap-select.min.js"></script> -->
 
     <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
     <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-datetimepicker.min.js"></script> -->
