--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -3,55 +3,55 @@
         <li class="nav-item <%= (displayId === 'Aa-12') ? 'active': ''; %>">
             <a class="nav-link" href="/places/movieTheater">
                 <i class="material-icons">theaters</i>
-                <p>劇場検索</p>
+                <p>劇場</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-10') ? 'active': ''; %>">
             <a class="nav-link" href="/creativeWorks/movie">
                 <i class="material-icons">movie</i>
-                <p>作品検索</p>
+                <p>映画作品</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-3') ? 'active': ''; %>">
             <a class="nav-link" href="/events/screeningEventSeries">
                 <i class="material-icons">event</i>
-                <p>劇場上映作品検索</p>
+                <p>劇場上映作品</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-4') ? 'active': ''; %>">
             <a class="nav-link" href="/events/screeningEvent">
                 <i class="material-icons">event</i>
-                <p>スケジュール登録／検索</p>
+                <p>スケジュール</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-6') ? 'active': ''; %>">
             <a class="nav-link" href="/ticketTypes">
                 <i class="material-icons">local_offer</i>
-                <p>券種検索</p>
+                <p>券種</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-8') ? 'active': ''; %>">
             <a class="nav-link" href="/ticketTypeGroups">
                 <i class="material-icons">local_offer</i>
-                <p>券種グループ検索</p>
+                <p>券種グループ</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'AT-01') ? 'active': ''; %>">
             <a class="nav-link" href="/accountTitles">
                 <i class="icon fa fa-table"></i>
-                <p>細目検索</p>
+                <p>細目</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'Aa-17') ? 'active': ''; %>">
             <a class="nav-link" href="/serviceTypes">
                 <i class="icon fa fa-table"></i>
-                <p>興行区分検索</p>
+                <p>興行区分</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'PS-02') ? 'active': ''; %>">
             <a class="nav-link" href="/priceSpecifications">
                 <i class="icon fa fa-dollar-sign"></i>
-                <p>価格仕様検索</p>
+                <p>価格仕様</p>
             </a>
         </li>
         <li class="nav-item <%= (displayId === 'PO-01') ? 'active': ''; %>">
@@ -63,7 +63,7 @@
         <li class="nav-item <%= (displayId === 'Aa-11') ? 'active': ''; %>">
             <a class="nav-link" href="/reservations">
                 <i class="material-icons">event_seat</i>
-                <p>予約検索</p>
+                <p>予約</p>
             </a>
         </li>
     </ul>
