--- a/views/productOffers/index.ejs
+++ b/views/productOffers/index.ejs
@@ -92,6 +92,7 @@ PO-01
                     <th>ID</th>
                     <th>名称<br>English Name<br>代替名称</th>
                     <th>発生金額<br>売上金額<br>適用単位</th>
+                    <th>アイテム</th>
                     <th></th>
                 </tr>
             </thead>
@@ -111,6 +112,7 @@ PO-01
                         <p>$priceSpecification.accounting.accountsReceivable$ $priceSpecification.priceCurrency$</p>
                         <p>/ $referenceQuantity.value$ 枚</p>
                     </td>
+                    <td name="itemOffered.name.ja">$itemOffered.name.ja$</td>
                     <td name="id__id__id" class="center">
                         <div class="text-center">
                             <a target="_blank" class="btn btn-sm btn-primary" href="/productOffers/$id$/update">
