--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,21 +1,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>
         <%= title %>
     </title>
-    <!-- BootstrapのCSS読み込み -->
-    <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    <!-- <link href="/css/bootstrap.css" rel="stylesheet"> -->
-    <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
-
-    <link href="/css/style.css" rel="stylesheet">
 
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css"
@@ -25,17 +14,31 @@
 
     <!-- Material Dashboard CSS -->
     <link rel="stylesheet" href="/node_modules/material-dashboard/assets/css/material-dashboard.min.css?v=2.1.1">
-
+    
+    <!-- datepicker CSS -->>
+    <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
+    
+    <!-- original -->
+    <link href="/css/style.css" rel="stylesheet">
     <%- defineContent('styles') %>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <!--   Core JS Files   -->
+    <script src="/node_modules/material-dashboard/assets/js/core/popper.min.js" type="text/javascript"></script>
+    <script src="/node_modules/material-dashboard/assets/js/core/bootstrap-material-design.min.js"
+        type="text/javascript"></script>
+
+    <!-- Plugin for the Perfect Scrollbar -->
+    <script src="/node_modules/material-dashboard/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+
+    <!--  Notifications Plugin    -->
+    <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-notify.js"></script>
+
+    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="/node_modules/material-dashboard/assets/js/material-dashboard.min.js?v=2.1.1"
+        type="text/javascript"></script>
 
     <!-- moment.js. -->
     <script src="/js/moment.min.js" type="text/javascript"></script>
@@ -45,37 +48,9 @@
     <script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
     <!-- datepicker日本語対応用ファイル -->
     <script src="/js/locales/bootstrap-datepicker.ja.js" type="text/javascript"></script>
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.21/moment-timezone.js" type="text/javascript"></script> -->
     <script src="/js/master/common.js"></script>
-
-    <!--   Core JS Files   -->
-    <script src="/node_modules/material-dashboard/assets/js/core/popper.min.js" type="text/javascript"></script>
-    <script src="/node_modules/material-dashboard/assets/js/core/bootstrap-material-design.min.js"
-        type="text/javascript"></script>
-
-    <!-- Plugin for the Perfect Scrollbar -->
-    <script src="/node_modules/material-dashboard/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-
-    <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-    <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-selectpicker.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/js/bootstrap-select.min.js"></script> -->
-
-    <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-    <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-datetimepicker.min.js"></script> -->
-
-    <!--  DataTables.net Plugin, full documentation here: https://datatables.net/    -->
-    <!-- <script src="/node_modules/material-dashboard/assets/js/plugins/jquery.datatables.min.js"></script> -->
-
-    <!--  Notifications Plugin    -->
-    <script src="/node_modules/material-dashboard/assets/js/plugins/bootstrap-notify.js"></script>
-
-    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-    <script src="/node_modules/material-dashboard/assets/js/material-dashboard.min.js?v=2.1.1"
-        type="text/javascript"></script>
 
     <%- defineContent('scripts') %>
 </head>
