### Added - COA券種インポートタスクを追加

--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -275,7 +275,7 @@
 
 <div class="form-group">
     <label for="accountTitle" class="">
-        細目<span class="text-danger">＊</span>
+        細目
     </label>
     <select class="form-control" name="accountTitle">
         <option value="" disabled selected>選択してください</option>
@@ -295,7 +295,7 @@
 
 <div class="form-group">
     <label for="availableAddOn" class="">
-        アドオン<span class="text-danger">＊</span>
+        アドオン
     </label>
     <select class="form-control" name="availableAddOn">
         <option value="" selected>選択してください</option>
