### Added - COAイベントインポートタスクを追加

--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -86,7 +86,7 @@
             value="<%= forms.additionalProperty[key].name %>">
 
         <input class="form-control" name="additionalProperty[<%= key %>][value]"
-            id="additionalProperty[<%= key %>][value]" placeholder="Value" maxlength=64
+            id="additionalProperty[<%= key %>][value]" placeholder="Value"
             value="<%= forms.additionalProperty[key].value %>">
     </div>
     <% }) %>
