--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -26,8 +26,11 @@ Aa-12
         </div>
 
         <div>
-            <button type="button" class="reset-condition btn btn-danger pull-right">検索内容リセット</button>
-            <button type="button" class="btn btn-ok search btn-primary pull-right">検索</button>
+            <a class="btn btn-primary" role="button" href="/places/movieTheater/new">
+                <i class=" fa fa-plus"></i> 登録</a>
+
+            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
         </div>
     </form>
 </div>
