### Added - ダッシュボード調整

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@ DB-01
             <div class="card eventsWithAggregation">
                 <div class="card-header card-header-warning">
                     <h4 class="card-title">本日のイベント</h4>
-                    <p class="card-category"><span class="eventsCount"></span>件のイベントがこれから開始予定です</p>
+                    <p class="card-category"><span class="eventsCount"></span>件のイベントがこれから開催中あるいは開催予定です</p>
                 </div>
                 <div class="card-body table-responsive">
                     <table class="table table-hover">
