--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,20 +138,20 @@ DB-01
     -->
 
     <div class="row">
-        <div class="col-lg-12 col-md-12">
+        <div class="col-lg-6 col-md-12">
             <div class="card eventsWithAggregation">
                 <div class="card-header card-header-warning">
                     <h4 class="card-title">本日のイベント</h4>
-                    <p class="card-category"><span class="eventsCount"></span>件のイベントがこれから開催中あるいは開催予定です</p>
+                    <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p>
                 </div>
                 <div class="card-body table-responsive">
                     <table class="table table-hover">
                         <thead class="text-warning">
                             <th>開始日時</th>
                             <th>名称</th>
-                            <th>有料券数</th>
-                            <th>前売券数</th>
-                            <th>無料件数</th>
+                            <th>有料券</th>
+                            <th>前売券</th>
+                            <th>無料券</th>
                             <th>発券</th>
                             <th>入場</th>
                         </thead>
@@ -159,7 +159,46 @@ DB-01
                         </tbody>
                     </table>
                     <div class="text-right">
-                        <a href="/events/screeningEvent" class="btn btn-primary">もっと見る</a>
+                        <a target="_blank" href="/events/screeningEvent" class="btn btn-grey">もっと見る</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 col-md-12">
+            <div class="card">
+                <div class="card-header card-header-tabs card-header-primary">
+                    <div class="nav-tabs-navigation">
+                        <div class="nav-tabs-wrapper">
+                            <!-- <span class="nav-tabs-title">Tasks:</span> -->
+                            <ul class="nav nav-tabs" data-tabs="tabs">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#latestReservations" data-toggle="tab">
+                                        <i class="material-icons">event_seat</i> 直近の予約
+                                        <div class="ripple-container"></div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="latestReservations">
+                            <table class="table table-hover">
+                                <thead class="text-primary">
+                                    <th>予約番号</th>
+                                    <th>更新日時</th>
+                                    <th>イベント</th>
+                                    <th>ステータス</th>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                            <div class="text-right">
+                                <a target="_blank" href="/reservations" class="btn btn-grey">もっと見る</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
